Mon Apr 16 13:01:00 UTC 2007 Simon Massey  <sma@prismtech.com>

        * ace/config-win32-msvc-7.h:
        * ace/config-win32-msvc-8.h:
        * ace/README:

          Add the new #define ACE_HAS_HEADER_ALLOCATED_CLASS_STATIC_CONST_INT_STOREAGE
          to the known offending platforms (Microsoft VC7 and VC8).

Mon Apr 16 11:01:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Log_Msg_Test.cpp:
          Made this test working for VxWorks 6.x kernel mode

        * tests/Handle_Set_Test.cpp:
        * tests/Priority_Reactor_Test.cpp:
        * tests/Process_Strategy_Test.cpp:
        * tests/Test_Output.cpp:
          Removed support for psos

        * tests/Barrier_Test.cpp:
          Fixed typo in comment

Mon Apr 16 08:41:56 UTC 2007 Martin Corino  <mcorino@remedy.nl>

        * tests/run_test.lst:
        * bin/tao_orb_tests.lst:

          (Temporary) exclusion of some tests which tend to cause too
          much trouble (spontaneous system reboots) on OpenVMS IA64
          for the moment. The cause seems to be some vulnerabilities in
          the OpenVMS IA64 threading library and that will take time
          to be resolved.

Sun Apr 15 06:04:56 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added bug 2805 regression

Sun Apr 15 06:04:56 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added bug 2844 regression

Sat Apr 14 18:57:56 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added bug 2804 regression

Thu Apr 12 19:14:00 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_other_tests.lst:

          Added the Bug_1385_Regression test.

Thu Apr 12 19:05:56 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/doxygen-convert-h.pl:

          Fixed a typo in a variable name.  Using strict would have caught
          this.
