@@ -13,11 +13,6 @@
 
 #undef ACE_WCHAR_IN_STD_NAMESPACE
 
-// This may be true for earlier Solaris versions, but I can only verify it
-// for Solaris 8 and later.
-#define ACE_HAS_VFWPRINTF
-#define ACE_SHM_OPEN_REQUIRES_ONE_SLASH
-
 // This may be true for versions prior to Solaris 8 as well, but I don't
 // have any to try it on.
 #if !defined (ACE_HAS_TIMEZONE)
