@@ -1,3 +1,12 @@
+Mon Apr 16 15:41:39 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
+
+        * ace/config-sunos5.7.h:
+        * ace/config-sunos5.8.h:
+
+          Moved the setting of ACE_HAS_VFWPRINTF and
+          ACE_SHM_OPEN_REQUIRES_ONE_SLASH to config-sunos5.7.h.  They are
+          valid for this platform as well as SunOS 5.8.
+
 Mon Apr 16 13:01:00 UTC 2007 Simon Massey  <sma@prismtech.com>
 
         * ace/config-win32-msvc-7.h:
